test/scc_test/exp/semantic-errors/024.t
void test()
{
    float a;
    ~a;
}